--- a/StatusError3.html
+++ b/StatusError3.html
@@ -29,9 +29,9 @@
 			When we finished the project, the website looked so amazing. 
 			We hope our project will deserve the best grade from you.</p>
 		<h1>Our Codecademy profiles</h1>
-		<a class="a" href="" target="_blank">Bahram Hasanov</a>
+		<a class="a" href="https://www.codecademy.com/profiles/bhasanov15557" target="_blank">Bahram Hasanov</a>
 		<a class="a" href="https://www.codecademy.com/profiles/VagifKarimli" target="_blank">Vagif Karimli</a>
-		<a class="a" href="" target="_blank">Ramiz Taghiyev</a>
+		<a class="a" href="https://www.codecademy.com/profiles/RamizTaghiyev" target="_blank">Ramiz Taghiyev</a>
 		<a class="a" href="https://www.codecademy.com/profiles/MuradTahmazli" target="_blank">Murad Tahmazli</a>
 	</div>
 	<br><br><br>
