--- a/StatusError.html
+++ b/StatusError.html
@@ -68,7 +68,7 @@
 	</div>
 	
 	<div class="footer">
-		<p class="ada">ADA Univeristy</p>
+		<p class="ada">ADA University</p>
 		<p class="address">61 Ahmadbay Agha-Oglu Street, Baku, Azerbaijan, AZ1008</p>
 		<a class="a" href="https://www.facebook.com/vaqif.kerimli.1466/" target="_blank">Facebook</a>
 		<a class="a" href="https://www.instagram.com/ada.university/" target="_blank">Instagram</a>
